# Tiraz

./: .env  .env.example  .gitignore  .pre-commit-config.yaml  APK_BUILD_OPTIONS.md  ARCHITECTURE-FIXES.md  BOILERPLATE_SETUP_COMPLETE.md  CHANGELOG.md  CLEANUP_SUMMARY.md  CODESPACES-SETUP.md  CODESPACES_GUIDE.md  DEPLOY-NOW.md  DESIGNER_DASHBOARD_SUMMARY.md  FINAL-RESOLUTION.md  FIXES-SUMMARY.md  IMPLEMENTATION_COMPLETE.md  IMPROVEMENTS.md  INFRASTRUCTURE.md  MIGRATION.md  QUICKSTART-INFRASTRUCTURE.md  QUICKSTART.md  QUICK_APK_BUILD.md  README-OLD.md  README.md  SECURITY.md  SPRINT1_SETUP_GUIDE.md  SPRINT1_SUMMARY.md  SUMMARY.txt  VERIFICATION.md  configure-codespaces.sh  debug_upload.py  diagnose.sh  docker-compose.test.yml  docker-compose.yml  qeyafa-prototype-v4.html  requirements-dev.txt  requirements.txt  run.py  setup-infrastructure.sh  test-infrastructure.sh  (+2 more)
backend/: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  cleanup_test_users.py  create_test_designs.py  db_url_debug.py  e2e_auth_test.py  entrypoint.sh  integration_test.py  main.py  package.json  pydantic_settings.py  pyproject.toml  requirements.txt  test_db_connection.py  validate_env.py  wait_for_db.py
backend/alembic/: env.py
backend/ci/: check_db.py
backend/core/: config.py  database.py  deps.py  security.py
backend/crud/: __init__.py  color.py  design.py  fabric.py  measurement.py
backend/models/: __init__.py  asset.py  category.py  color.py  design.py  fabric.py  measurement.py  template.py  user.py
backend/schemas/: __init__.py  category.py  color.py  design.py  fabric.py  (+2 more)
(+207 files in other folders)
