[tool.poetry]
name = "qeyafa-backend"
version = "0.1.0"
description = "Qeyafa Backend API"
authors = ["OsmanMohamad249 <182751893+OsmanMohamad249@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.109.1"
uvicorn = {extras = ["standard"], version = "0.22.0"}
python-multipart = "0.0.6"
pydantic = {extras = ["dotenv"], version = "1.10.7"}
gunicorn = "21.2.0"
sqlalchemy = "2.0.23"
alembic = "1.13.1"
psycopg2-binary = "2.9.9"
passlib = {extras = ["bcrypt"], version = "1.7.4"}
python-jose = {extras = ["cryptography"], version = "3.4.0"}
python-dotenv = "1.0.0"
email-validator = "2.1.1"
aiofiles = "23.2.1"
fastapi-limiter = "0.1.5"
async-timeout = "^4.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "7.4.3"
httpx = "0.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
